2025-08-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Fix a regression caused by yesterday's fix for bug #3855.

2025-08-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc/support/regression/tests/rabbit.c:
	  Enable test for f8, since it now passes.
	* src/SDCCopt.c,
	  support/regression/tests/bitintarith.c.in,
	  support/regression/tests/bug-3855.c:
	  Fix bug #3855.
	* src/z80/gen.c,
	  support/regression/tests/bug-3850.c:
	  Fix bug #3850.

2025-07-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCC.lex,
	  doc/sdccman.lyx:
	  #pragma max_allocs_per_node.

2025-07-15 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/mcs51/at89x51.h:
	  Fix typo in header, see bug #3861.

2025-07-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc/doc/MCS51_named.svg:
	  Put __sfr into mcs51 address space graphic.

2025-06-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/peep.c:
	  Replace leftArg and rightArg functions by new lineArg function.

2025-06-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.h,
	  src/f8/peep.c,
	  src/mos6502/peep.c,
	  src/pdk/peep.c,
	  src/stm8/peep.c:
	  Replace ISINST macro by a new lineIsInst function.

2025-06-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* configure.ac,
	  configure:
	  Fix mos65(c)02 configure option descriptions.

2025-06-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve Z80N, Z180, eZ80 multiplication (RFE #972).

2025-06-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def:
	  Minor optimizations for subtractions.

2025-06-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* configure.ac,
	  configure,
	  support/valdiag/Makefile.in:
	  Reenable mos6502 and mos65c02 port by default.

2025-06-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pic14/gen.c,
	  src/pic14/gen.h,
	  src/pic14/genarith.c,
	  configure.ac,
	  configure: